feat: encrypt done for basic test
